# dmk_l1otp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make_work_folder.sh
postprocess/: README.md  base00.session  rotate.py
preprocess/: .gitignore  README.md  forcings.py  grids.py  inputs.ctrl  optimal_tdens.py  timedata.py
preprocess/3d_assembly/: Makefile  cell.py  common.py  example_forcing.py  example_grid.py  main.py  make_optimal_gradient.py  make_optimal_potential.py  make_optimal_tdens.py  mesh_tools.py  meshtools.py  timecell.py
preprocess/assembly/: branch.py  cell.py  common.py  cycle_tdens0.py  dat2pixel.py  dirac2rhs_integrated.py  example_forcing.py  example_grid.py  example_grid3d.py  hexagonal_grid.py  main.py  make_dirichlet.py  make_forcing.py  make_graph_forcing.py  make_neumann.py  make_optimal_gradient.py  make_optimal_potential.py  make_optimal_tdens.py  make_optpot.py  meshtools.py  pixel2dat.py  quad_graph.py  rectangle_grid.py  scalars.py  time_varying_forcing.py  timecell.py
preprocess/surface_assembly/: .#readme_inputs.txt  cell.py  common.py  example.py  example_forcing.py  example_grid.py  example_tdens0.py  inputs.ctrl  inputs_sphere.ctrl  main.py  make_grid.py  make_optimal_tdens.py  make_optimal_velocity.py  meshtools_surface.py  readme_inputs.txt  rectangle_grid.py  scalars.py  timecell.py
preprocess/surface_assembly/cut_locus/: Surfaces_paper_cutLocus.m  cut_locus_torus.py  inputs_ellipsoid.ctrl  project_ellipsoid.py  project_quartic.py  project_torus.py  set_dirac.py  substitute_point_in_mesh.m
preprocess/surface_assembly/project2sphere/: Makefile  README  project2sphere.f90
preprocess/surface_assembly/sphere_otp/: inputs_sphere.ctrl  project_sphere.py  reflex_hemispher.py
preprocess/surface_assembly/subgrid_preprocess/code/: 00modGlobals.f90  01modIOdefs.f90  10modMatrix.f90  12modGeneralSparseMatrix.f90  22modSparseMatrix.f90  37modTimeOutput.f90  39modTimeInputs.f90  50modGeometry.f90  60modP1Galerkin.f90  Makefile  main.f90
preprocess/surface_assembly/subgrid_preprocess/code/Rules_make/: Rules.make
preprocess/surface_assembly/subgrid_preprocess/code/scripts/: find_mod_names  mkdeps
preprocess/surface_assembly/uniform_refinement/code/: 00modGlobals.f90  01modIOdefs.f90  22modSparseMatrix.f90  50modGeometry.f90  Makefile  main.f90
preprocess/surface_assembly/uniform_refinement_repos/code/: Makefile  main.f90
preprocess/surface_assembly/uniform_refinement_repos/code/Rules_make/: dependencies
python/: README.md  dmk_p1p0.py
python/examples/FaccaDaneriCardinPutti2020_TestCase1/: main.ipynb
python/examples/design_optimal_network/: main.ipynb
python/examples/diego/: test2.py
script_controls/: dmk.ctrl  dmk.inputs  dmk_folder.py
script_controls/python_script/: utilities.py
srcs/: dmk_from_file.f90  main.f90
